force-app/main/default/objects/Tax_Ratio__c/Tax_Ratio__c.object-meta.xml
<CustomObject>
    <customHelpPage>page_TaxratioOnlineHelp</customHelpPage>
    <description>Tax Ratio</description>
    <label>消費税</label>
    <nameField>
        <label>Tax Ratio</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>