force-app/main/default/objects/Tax_Ratio__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD - U.S. Dollar</fullName>
            </value>
            <value>
                <fullName>VND - Vietnam Dong</fullName>
            </value>
            <value>
                <fullName>KHR - Cambodian Riel</fullName>
            </value>
            <value>
                <fullName>JPY - Japanese Yen</fullName>
            </value>
            <value>
                <fullName>KRW - Korean Won</fullName>
            </value>
            <value>
                <fullName>AUD - Australian Dollar</fullName>
            </value>
            <value>
                <fullName>HKD - Hong Kong Dollar</fullName>
            </value>
            <value>
                <fullName>IDR - Indonesian Rupiah</fullName>
            </value>
            <value>
                <fullName>MMK - Myanmar Kyat</fullName>
            </value>
            <value>
                <fullName>MYR - Malaysian Ringgit</fullName>
            </value>
            <value>
                <fullName>NZD - New Zealand Dollar</fullName>
            </value>
            <value>
                <fullName>PPH - Philippine Peso</fullName>
            </value>
            <value>
                <fullName>THB - Thai Baht</fullName>
            </value>
            <value>
                <fullName>TWD - Taiwan Dollar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>