force-app/main/default/objects/Tax_Ratio__c/fields/Selling_Tax_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Selling_Tax_Ratio__c</fullName>
    <label>Selling Tax Ratio (%)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>