force-app/main/default/objects/Tax_Ratio__c/fields/TAX_RATIO_ID__c.field-meta.xml
<CustomField>
    <fullName>TAX_RATIO_ID__c</fullName>
    <displayFormat>TAX-{000}</displayFormat>
    <label>TAX RATIO ID</label>
    <type>AutoNumber</type>
</CustomField>