force-app/main/default/objects/Tax_Ratio__c/validationRules/Country_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( TEXT(Currency__c) )</errorConditionFormula>
    <errorDisplayField>Currency__c</errorDisplayField>
    <errorMessage>Currency is empty. Please select currency.</errorMessage>
</ValidationRule>