force-app/main/default/objects/Tax_Ratio__c/validationRules/End_Date_Must_Be_Greater_Than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Must_Be_Greater_Than_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt;  Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>The End Date must be after Start Date</errorMessage>
</ValidationRule>