force-app/main/default/objects/Tax_Ratio__c/listViews/Account_Team_Tax_Ratio.listView-meta.xml
<ListView>
    <fullName>Account_Team_Tax_Ratio</fullName>
    <filterScope>Queue</filterScope>
    <label>Account Team</label>
    <queue>Account_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>