force-app/main/default/objects/Tax_Ratio__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TAX_RATIO_ID__c</columns>
    <columns>Active__c</columns>
    <columns>Currency__c</columns>
    <columns>Selling_Tax_Ratio__c</columns>
    <columns>Buying_Tax_Ratio__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>Accounting_Manager</roleAndSubordinates>
        <roleAndSubordinates>Accounting_Staff</roleAndSubordinates>
        <roleAndSubordinates>Air_Export_Operation_Manager</roleAndSubordinates>
        <roleAndSubordinates>Air_Export_Operation_Staff</roleAndSubordinates>
        <roleAndSubordinates>Air_Import_Operation_Manager</roleAndSubordinates>
        <roleAndSubordinates>Air_Import_Operation_Staff</roleAndSubordinates>
        <roleAndSubordinates>Custom_Clearance_Manager</roleAndSubordinates>
        <roleAndSubordinates>Custom_Clearance_Staff</roleAndSubordinates>
        <roleAndSubordinates>Data_Entry_Manager</roleAndSubordinates>
        <roleAndSubordinates>Data_Entry_Staff</roleAndSubordinates>
        <roleAndSubordinates>Domestic_Sales_Manager</roleAndSubordinates>
        <roleAndSubordinates>Domestic_Sales_Staff</roleAndSubordinates>
        <roleAndSubordinates>Oversea_Sales_Manager</roleAndSubordinates>
        <roleAndSubordinates>Oversea_Sales_Staff</roleAndSubordinates>
        <roleAndSubordinates>Sea_Export_Operation_Manager</roleAndSubordinates>
        <roleAndSubordinates>Sea_Export_Operation_Staff</roleAndSubordinates>
        <roleAndSubordinates>Sea_Import_Operation_Manager</roleAndSubordinates>
        <roleAndSubordinates>Sea_Import_Operation_Staff</roleAndSubordinates>
        <roleAndSubordinates>Top_Executive</roleAndSubordinates>
        <roleAndSubordinates>Trucking_Manager</roleAndSubordinates>
        <roleAndSubordinates>Trucking_Operation_Staff</roleAndSubordinates>
    </sharedTo>
</ListView>