force-app/main/default/objects/Tax_Ratio__c/listViews/Tax_Ratio_Account_Team_Tax_Ratio.listView-meta.xml
<ListView>
    <fullName>Tax_Ratio_Account_Team_Tax_Ratio</fullName>
    <filterScope>Queue</filterScope>
    <label>Tax Ratio-Account Team</label>
    <queue>Tax_Ratio_Account_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>